force-app/main/default/objects/DataSource__c/DataSource__c.object-meta.xml
<CustomObject>
    <description>Source externe de données sport (API provider).</description>
    <label>Data Source</label>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>