force-app/main/default/objects/DataSource__c/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>