force-app/main/default/objects/DataSource__c/fields/CredentialAlias__c.field-meta.xml
<CustomField>
    <description>Alias de credential stocké hors objet (Named Credential recommandé).</description>
    <fullName>CredentialAlias__c</fullName>
    <label>Credential Alias</label>
    <length>120</length>
    <type>Text</type>
</CustomField>