force-app/main/default/objects/DataSource__c/fields/SyncFrequency__c.field-meta.xml
<CustomField>
    <fullName>SyncFrequency__c</fullName>
    <label>Sync Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Time</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>